--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<!-- Bootstrap Icons-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+
+	<title>Insert title here</title>
 </head>
+
 <body>
-	<form method="post" action="/result">
-		<input type="text" name="inputValue">
-		<br>
-		<input type="submit" value="送信">
-	</form>
+	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang" target="_">
+		<i class="bi-twitter"></i>
+	</a>
+	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang" target="_">
+		<i class="bi-discord"></i>
+	</a>
+	<a class="btn btn-primary btn-sm" href="https://github.com/K-MountainBook" target="_">
+		<i class="bi-github"></i>
+	</a>
 </body>
+
 </html>
