--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,12 @@
 	<a class="btn btn-primary btn-sm" href="https://github.com/K-MountainBook" target="_">
 		<i class="bi-github"></i>
 	</a>
+
+	<form action="/result" method="POST">
+		<textarea name="inputValue" value="test">area</textarea>
+		<button type="submit">submit</button>
+	</form>
+
 </body>
 
 </html>
