--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<!-- Bootstrap Icons-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-
-	<title>Insert title here</title>
+<meta charset="UTF-8">
+<!-- Bootstrap Icons-->
+<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
+	rel="stylesheet">
+<link th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}"
+	rel="stylesheet">
+<title>Insert title here</title>
 </head>
 
 <body>
-	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang" target="_">
-		<i class="bi-twitter"></i>
+	<p th:text="${sample}"></p>
+	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang"
+		target="_"> <i class="bi-twitter"></i>
 	</a>
-	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang" target="_">
-		<i class="bi-discord"></i>
+	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang"
+		target="_"> <i class="bi-discord"></i>
 	</a>
-	<a class="btn btn-primary btn-sm" href="https://github.com/K-MountainBook" target="_">
-		<i class="bi-github"></i>
+	<a class="btn btn-primary btn-sm"
+		href="https://github.com/K-MountainBook" target="_"> <i
+		class="bi-github"></i>
 	</a>
 
-	<form action="/result" method="POST">
-		<textarea name="inputValue" value="test">area</textarea>
+	<form th:action="@{/confirm}" method="POST">
+		<input type="text" name="inputValue">
 		<button type="submit">submit</button>
 	</form>
 
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
