--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang"
 		target="_"> <i class="bi-twitter"></i>
 	</a>
-	<a class="btn btn-primary btn-sm" href="https://twitter.com/deilechang"
+	<a class="btn btn-primary btn-sm" href="https://discord.gg/vTNadhyTUW"
 		target="_"> <i class="bi-discord"></i>
 	</a>
 	<a class="btn btn-primary btn-sm"
