--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
+<head th:replace="header :: common_header">
+    <meta charset="UTF-8">
+    <title th:replace="${title}">Staff Management System</title>
 </head>
 <body>
-	<p th:text="${message}"></p>
+    <div th:replace="header :: header"></div>
+        <p th:text="${message}"></p>
+    </div>
+    <div th:replace="footer :: footer"></div>
 </body>
 </html>
