--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,7 +5,7 @@
     <title th:replace="${title}">Staff Management System</title>
 </head>
 <body>
-    <div th:replace="header :: header"></div>
+    <div th:replace="header :: header">
         <p th:text="${message}"></p>
     </div>
     <div th:replace="footer :: footer"></div>
