--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -17,6 +17,7 @@
             <a class="btn btn-primary btn-sm w-10" href="https://github.com/K-MountainBook" target="_">
                 <i class="bi-github"></i>
             </a>
+            <!-- bootstrap js -->
             <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
         </footer>
     </div>
