--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,14 +10,13 @@
     <p th:text="${sample}"></p>
 
 
-    <form method="POST" th:action="@{/confirm}"><input name="inputValue" type="text">
+    <form method="POST" th:action="@{/test/confirm}"><input name="inputValue" type="text">
         <button type="submit">Submit</button>
     </form>
 
     <a th:href="@{/test/greeting?message=request}">GET</a>
     <br>
     <a th:href="@{/test/comment}">COMMENT</a>
-
     <div th:each="user : ${users}">
         <div>[[${user.user_id}]] - [[${user.user_name}]]</div>
     </div>
