--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,7 +7,7 @@
 <body>
     <div th:replace="header :: header"></div>
     <h3>comment</h3>
-    <form th:action="@{/comment/add}" th:object="${comment}" method="post">
+    <form th:action="@{/test/comment/add}" th:object="${comment}" method="post">
         <label>Comment:</label><input type="text" th:field="*{content}">
         <button>登録</button>
         <br> <small style="color:red" th:errors="*{content}"></small>
