--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ja">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	lang="ja">
 <head th:fragment="common_header">
 <meta charset="UTF-8">
 <!-- Bootstrap-->
-<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <!-- Bootstrap Icons-->
-<link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}">
+<link rel="stylesheet"
+	th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}">
 <!-- My Style Sheet-->
 <link rel="stylesheet" th:href="@{/css/style.css}">
 <title th:text="${title}"></title>
 </head>
 
 <body lang="ja">
-    <div th:fragment="header">
-        <header>
-            <a th:href="@{/}"> <img th:src="@{/img/logo.png}" class="logo">
-            </a>
-        </header>
-        <hr>
-    </div>
+	<div th:fragment="header">
+		<header>
+			<a th:href="@{/}"> <img th:src="@{/img/logo.png}" class="logo">
+			</a>
+			<div sec:authorize="isAnonymous()"><a th:href="@{/login}">Login</a></div>
+			<div sec:authorize="isAuthenticated()">Logout</div>
+		</header>
+		<hr>
+	</div>
 </body>
 
 </html>
