--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,18 @@
 <head th:replace="header :: common_header(title = 'Log in')">
 </head>
 <body>
-    <div th:replace="header :: header"></div>
-    <div th:replace="footer :: footer"></div>
-
+	<div th:replace="header :: header"></div>
+	<form th:action="@{/login}" method="post">
+		<p>
+			<input type="text" id="email" name="email" class="form-control"
+				placeholder="E-Mail Address">
+		</p>
+		<p>
+			<input type="password" id="pswd" name="pswd" class="form-control"
+				placeholder="Password">
+		</p>
+		<button class="btn btn-primary" type="submit">ログイン</button>
+	</form>
+	<div th:replace="footer :: footer"></div>
 </body>
 </html>
