--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div th:replace="header :: header"></div>
-
+	index
     <div th:replace="footer :: footer"></div>
 </body>
 </html>
