--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -20,8 +20,14 @@
 		<header>
 			<a th:href="@{/}"> <img th:src="@{/img/logo.png}" class="logo">
 			</a>
-			<div sec:authorize="isAnonymous()"><a th:href="@{/login}">Login</a></div>
-			<div sec:authorize="isAuthenticated()">Logout</div>
+			<div sec:authorize="isAnonymous()">
+				<a th:href="@{/login}">Login</a>
+			</div>
+			<div sec:authorize="isAuthenticated()">
+				<form th:action="@{/logout}" method="post">
+					<button class="btn btn-primary" type="submit">Logout</button>
+				</form>
+			</div>
 		</header>
 		<hr>
 	</div>
