--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -31,6 +31,7 @@
 					<button class="btn btn-primary" type="submit">Logout</button>
 				</form>
 			</div>
+			<a th:href="@{/event/make}">Make Event</a>
 		</header>
 		<hr>
 	</div>
