--- a/src/main/resources/templates/event_make.html
+++ b/src/main/resources/templates/event_make.html
@@ -7,28 +7,42 @@
 	<!--/* イベント作成フォームを作成 */-->
 	<form th:action="@{/event/make}" method="post" name="EventForm">
 		<p>
-			<input type="text" id="title" name="title" class="form-control"
-				placeholder="Title">
+			<!-- イベントタイトル -->
+			<label>イベント名</label> <input type="text" id="title" name="title"
+				class="form-control" placeholder="Title">
 		</p>
 		<p>
+			<!-- イベント詳細 -->
+			<label>開催概要</label>
 			<textarea id="details" name="details" class="form-control"
 				placeholder="Details"></textarea>
 		</p>
 		<p>
-			<input type="text" id="address" name="address" class="form-control"
-				placeholder="Address">
+			<!-- 開催日 -->
+			<label>開催日</label> <input type="date" id="fromDate" name="fromDate"
+				class="form-control" placeholder="Date"><input type="date"
+				id="toDate" name="toDate" class="form-control"
+				placeholder="Date"> <input type="time" id="from"
+				name="fromTime" class="form-control" placeholder="Date"> <input
+				type="time" id="to" name="toTime" class="form-control"
+				placeholder="Date">
 		</p>
 		<p>
-			<input type="number" id="max_participant" name="max_participant"
-				class="form-control" placeholder="max_participant">
+			<!-- 会場 -->
+			<label>会場</label> <input type="text" id="address" name="address"
+				class="form-control" placeholder="Address">
 		</p>
 		<p>
-			<input type="datetime-local" id="date" name="date"
-				class="form-control" placeholder="Date">
+			<!-- 参加可能人数 -->
+			<label>参加可能人数</label> <input type="number" id="max_participant"
+				name="max_participant" class="form-control"
+				placeholder="max_participant">
 		</p>
 		<p>
+			<!-- 公開フラグ -->
 			<input type="checkbox" id="public_flag" name="public_flag"
 				class="form-check-input" placeholder="public_flag" checked>
+			<label>全体公開</label>
 		</p>
 		<button class="btn btn-primary" type="submit">確認</button>
 	</form>
