--- a/src/main/resources/templates/event_list.html
+++ b/src/main/resources/templates/event_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
-<head th:replace="header :: common_header(title = 'Event Details')">
+<head th:replace="header :: common_header(title = 'Event List')">
 </head>
 <body>
     <div th:replace="header :: header"></div>
