--- a/src/main/resources/templates/user_notfound.html
+++ b/src/main/resources/templates/user_notfound.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
-<head th:replace="header :: common_header(title = 'Event Join Confirm')">
+<head th:replace="header :: common_header(title = 'User Notfound')">
 </head>
 <body>
 	<div th:replace="header :: header"></div>
