--- a/src/main/resources/templates/event_make.html
+++ b/src/main/resources/templates/event_make.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ja">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	lang="ja">
 <head th:replace="header :: common_header(title = 'Make Event')">
 </head>
 <body>
