--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -7,8 +7,8 @@
     <div th:fragment="footer">
         <hr>
         <footer class="container text-center">
-            <p class="text-center">&copy; 2021 KY</p>
-            <a class="btn btn-primary btn-sm w-10" href="https://twitter.com/deilechang" target="_">
+            <p class="text-center">&copy;2022 @deile666</p>
+            <a class="btn btn-primary btn-sm w-10" href="https://twitter.com/deile666" target="_">
                 <i class="bi-twitter"></i>
             </a>
             <a class="btn btn-primary btn-sm w-10" href="https://discord.gg/vTNadhyTUW" target="_">
