--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -8,13 +8,13 @@
         <hr>
         <footer class="container text-center">
             <p class="text-center">&copy;2022 @deile666</p>
-            <a class="btn btn-primary btn-sm w-10" href="https://twitter.com/deile666" target="_">
+            <a class="btn btn-outline-secondary btn-sm w-10" href="https://twitter.com/deile666" target="_">
                 <i class="bi-twitter"></i>
             </a>
-            <a class="btn btn-primary btn-sm w-10" href="https://discord.gg/vTNadhyTUW" target="_">
+            <a class="btn btn-outline-secondary btn-sm w-10" href="https://discord.gg/vTNadhyTUW" target="_">
                 <i class="bi-discord"></i>
             </a>
-            <a class="btn btn-primary btn-sm w-10" href="https://github.com/K-MountainBook" target="_">
+            <a class="btn btn-outline-secondary btn-sm w-10" href="https://github.com/K-MountainBook" target="_">
                 <i class="bi-github"></i>
             </a>
             <!-- bootstrap js -->
