--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,14 +4,11 @@
 	lang="ja">
 <head th:fragment="common_header">
 <meta charset="UTF-8">
-<!-- sznitize.css-->
-<link rel="stylesheet" th:href="@{/css/sanitize.css}">
+<meta name="robots" content="noindex">
+<meta name="robots" content="nofollow">
 <!-- Bootstrap-->
 <link rel="stylesheet"
 	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-<!-- Bootstrap Icons-->
-<link rel="stylesheet"
-	th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}">
 <!-- My Style Sheet-->
 <link rel="stylesheet" th:href="@{/css/style.css}">
 <title th:text="${title}"></title>
