--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
-<head th:replace="header :: common_header(title = 'Dashboard')">
+<head th:replace="header :: common_header(title = 'でいるさーば')">
 </head>
 
 <body>
 	<div th:replace="header :: header"></div>
 	<div class="container-fluid">
-		<p>
-			<a href="https://github.com/K-MountainBook/MinecraftDeileServerMods">Mod等の要件(GitHub)</a>
-		</p>
-		<p>
-			<a th:href="@{/mcmap}">世界地図</a>
-		</p>
-		<p>
-			連絡先:<a href="https://twitter.com/deile666">@deile666</a>
-		</p>
+	</div>
+	<div class="row justify-content-center">
+		<div class="col-lg-6 col-md-8 col-sm-8 col-xs-auto">
+			<h1>Contents</h1>
+			<ul>
+				<li><i class="bi bi-pci-card"></i><a
+						href="https://github.com/K-MountainBook/MinecraftDeileServerMods">Mod等の要件(GitHub)</a>
+				</li>
+				<li><i class="bi bi-map"></i><a th:href="@{/mcmap}">世界地図</a></li>
+			</ul>
+		</div>
+	</div>
 	</div>
 	<div th:replace="footer :: footer"></div>
 </body>
