--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,7 @@
 @charset "UTF-8";
 
-@import
-	url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css")
-	;
-
-@import url("/css/sanitize.css");
+@import	url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import url("sanitize.css");
 
 h1 {
 	margin: 0.3em 0;
