--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,14 +1,17 @@
 @charset "UTF-8";
 
-@import	url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import url("sanitize.css");
 
-h1 {
-	margin: 0.3em 0;
-}
+@import
+	url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css")
+	;
 
-a {
-	color: #363636;
+@import
+	url('https://fonts.googleapis.com/css2?family=Righteous&family=Sriracha&display=swap')
+	;
+
+h1 {
+	font-family: 'Righteous', cursive;
 }
 
 ul {
@@ -18,4 +21,35 @@ ul {
 
 ul li {
 	margin-top: 5px;
+}
+
+.bannerBlock {
+	margin-left: 10px;
+	margin-right: 10px;
+	padding: 0;
+	width: 300px;
+	height: 300px;
+	position: relative;
+	padding: 0;
+}
+
+.bannerBlock span {
+	font: 24px 'Righteous', cursive;
+	position: absolute;
+	text-align: center;
+	left: 50%;
+	top: 50%;
+	color: #FFF;
+	transform: translate(-50%, -50%);
+	position: absolute;
+}
+
+.bannerBlock img {
+	height: 300px;
+	width: 300px;
+	transition: all 1s ease 0s;
+}
+
+.bannerBlock img:hover {
+	opacity: .5;
 }
