--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -55,10 +55,13 @@ ul li {
 
 .bannerBlockLong {
 	text-align: center;
+	/*
 	margin-left: 10px;
 	margin-right: 10px;
 	padding: 0;
+	*/
 	position: relative;
+	
 }
 
 .bannerBlockLong span {
