--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,35 +7,30 @@
 <body>
 	<div th:replace="header :: header"></div>
 	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-md-4" style="text-align: center;">
-				<h1>Contents</h1>
-			</div>
+		<div style="text-align: center;">
+			<h1>Contents</h1>
 		</div>
 
 		<div class="row justify-content-center" style="margin-bottom: 30px;">
-			<div class="col-md-4 bannerBlock">
-				<a
-					th:href="@{https://github.com/K-MountainBook/MinecraftDeileServerMods}">
-					<img th:src="@{/img/mod_banner.png}"> <span><i class="bi bi-minecart-loaded"></i><br>RequireMod<br>(GitHub)</span>
+			<div class="col"></div>
+			<div class="col bannerBlock">
+				<a th:href="@{https://github.com/K-MountainBook/MinecraftDeileServerMods}"> <img th:src="@{/img/mod_banner.png}"> <span><i class="bi bi-minecart-loaded"></i><br>RequireMod<br>(GitHub)</span>
 				</a>
 			</div>
-			<div class="col-md-4 bannerBlock">
-				<a th:href="@{/mcmap}"> <img th:src="@{/img/map_banner.png}">
-					<span> <i class="bi bi-map"></i><br>World Map
+			<div class="col bannerBlock">
+				<a th:href="@{/mcmap}"> <img th:src="@{/img/map_banner.png}"> <span> <i class="bi bi-map"></i><br>World Map
 				</span>
 				</a>
 			</div>
+			<div class="col"></div>
 		</div>
 		<div class="row justify-content-center" style="margin-bottom: 30px;">
-			<div class="col-md-8 bannerBlockLong">
-				<a
-					th:href="@{https://twitter.com/messages/compose?recipient_id=90141473}"
-					target="_blank"> <img th:src="@{/img/minecraft_image.webp}">
-					<span> <i class="bi bi-chat-left-dots"></i><br>Contact<br>(TwitterDM)
+			<div class="bannerBlockLong">
+				<a th:href="@{https://twitter.com/messages/compose?recipient_id=90141473}" target="_blank"> <img th:src="@{/img/minecraft_image.webp}"> <span> <i class="bi bi-chat-left-dots"></i><br>Contact<br>(TwitterDM)
 				</span>
 				</a>
 			</div>
+			<div class="col-2"></div>
 		</div>
 	</div>
 	<div th:replace="footer :: footer"></div>
