--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
-<head th:replace="header :: common_header(title = 'でいるさーば')">
+<head th:replace="~{header :: common_header(title = 'でいるさーば')}">
 </head>
 
 <body>
-	<div th:replace="header :: header"></div>
+	<div th:replace="~{header :: header}"></div>
 	<div class="container">
 		<div style="text-align: center;">
 			<h1>Contents</h1>
@@ -14,7 +14,8 @@
 		<div class="row justify-content-center" style="margin-bottom: 30px;">
 			<div class="col"></div>
 			<div class="col bannerBlock">
-				<a th:href="@{https://github.com/K-MountainBook/MinecraftDeileServerMods}"> <img th:src="@{/img/mod_banner.png}"> <span><i class="bi bi-minecart-loaded"></i><br>RequireMod<br>(GitHub)</span>
+				<a th:href="@{https://github.com/K-MountainBook/MinecraftDeileServerMods}"> <img th:src="@{/img/mod_banner.png}"> <span><i
+						class="bi bi-minecart-loaded"></i><br>RequireMod<br>(GitHub)</span>
 				</a>
 			</div>
 			<div class="col bannerBlock">
@@ -26,14 +27,15 @@
 		</div>
 		<div class="row justify-content-center" style="margin-bottom: 30px;">
 			<div class="bannerBlockLong">
-				<a th:href="@{https://twitter.com/messages/compose?recipient_id=90141473}" target="_blank"> <img th:src="@{/img/minecraft_image.webp}"> <span> <i class="bi bi-chat-left-dots"></i><br>Contact<br>(TwitterDM)
+				<a th:href="@{https://twitter.com/messages/compose?recipient_id=90141473}" target="_blank"> <img th:src="@{/img/minecraft_image.webp}">
+					<span> <i class="bi bi-chat-left-dots"></i><br>Contact<br>(TwitterDM)
 				</span>
 				</a>
 			</div>
 			<div class="col-2"></div>
 		</div>
 	</div>
-	<div th:replace="footer :: footer"></div>
+	<div th:replace="~{footer :: footer}"></div>
 </body>
 
 </html>
